--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 </div>
 </div>
 </main>
+<p class="has-text-align-center has-medium-font-size">Your opion and views matter :) ...click on the below Icon to share</p>
 <div id="disqus_thread"></div>
 
 <footer class="wp-block-template-part">
