--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <title>Harmonious Hormones | A Healing Community for Reproductive Health & Hormonal Balance</title>
 
 <!-- Meta Description (appears in Google search) -->
-<meta name="description" content="Harmonious Hormones is a wellness blog and support space for women navigating fibroids, PCOS, cysts, irregular cycles, PMS, endometriosis, and hormonal imbalance. Join the community to heal, learn, and connect." />
+<meta name="description" content="Harmonious Hormones is a wellness blog and support space for women navigating fibroids, PCOS, cysts, irregular cycles, endometriosis, hormonal imbalance. Join the community to heal, learn, and connect." />
 
 <!-- Keywords (optional, some engines still use them) -->
-<meta name="keywords" content="hormonal imbalance, PCOS, fibroids, endometriosis, irregular periods, reproductive health, PMS, menstrual cycle, healing hormones, cysts, women's health blog" />
+<meta name="keywords" content="hormonal imbalance, PCOS, fibroids, endometriosis, irregular periods, reproductive health, PMS,cysts, menstrual cycle, healing hormones,  women's health blog" />
 
 <!-- Open Graph for Social Sharing -->
 <meta property="og:title" content="Harmonious Hormones" />
