--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Harmonious Hormones | A Healing Community for Reproductive Health & Hormonal Balance</title>
 
 <!-- Meta Description (appears in Google search) -->
-<meta name="description" content="A healing space for fibroids, endometriosis, PCOS, Periods and hormonal health — join our community for support, stories, and cycle education." />
+<meta name="description" content="A healing space for fibroids, endometriosis, PCOS,irregular Periods and hormonal health — join our community for support, stories, and cycle education." />
 
 <!-- Keywords (optional, some engines still use them) -->
 <meta name="keywords" content="hormonal imbalance, PCOS, fibroids, endometriosis, irregular periods, reproductive health, PMS,cysts, menstrual cycle, healing hormones,  women's health blog" />
