--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p class="has-text-align-center has-medium-font-size">Have you been diagnosed with fibroids, PCOS, cysts, endometriosis, or any other hormonal or uterine condition?</p>
+<p class="has-text-align-center has-medium-font-size">Have you been diagnosed with a hormonal or uterine condition such as fibroids, PCOS, cysts, endometriosis, or another related issue?</p>
 
 
 
