--- a/my-story/index.html
+++ b/my-story/index.html
@@ -236,7 +236,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p class="has-text-align-center">Within 20 minutes, my family was at my door. They carried me to the car and rushed me to the emergency room.</p>
+<p class="has-text-align-center">Within 20 minutes, my family were at my door. They carried me to the car and rushed me to the emergency room.</p>
 
 
 
