--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p class="has-text-align-center has-medium-font-size">Do you feel misunderstood, dismissed, or isolated – like you’re carrying the weight of it all by yourself?</p>
+<p class="has-text-align-center has-medium-font-size">Do you feel misunderstood, dismissed, or isolated  like you’re carrying the weight of it all by yourself?</p>
 
 
 
@@ -192,7 +192,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p class="has-text-align-center has-medium-font-size">Let’s talk. Let’s learn. Let’s support each other – without judgment, without shame.</p>
+<p class="has-text-align-center has-medium-font-size">Let’s talk. Let’s learn. Let’s support each other without judgment, without shame.</p>
 
 
 
