--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p class="has-text-align-center has-medium-font-size">Whether you&#8217;re navigating surgery, infertility, chronic pain, cycle issues, or the emotional toll of being unheard – this is a space for you.</p>
+<p class="has-text-align-center has-medium-font-size">Whether you&#8217;re navigating surgery, infertility, chronic pain, cycle issues, or the emotional toll of being unheard  this is a space for you.</p>
 
 
 
