--- a/my-story/index.html
+++ b/my-story/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Basic SEO -->
 <title>“You Can’t Just Ignore It” — My Fibroid and Myomectomy Journey</title>
-<meta name="description" content="A personal story about living with fibroids, undergoing a myomectomy, and  woman learning to listen to her body.">
+<meta name="description" content="A personal story about living with fibroids, undergoing a myomectomy, and  learning to listen to your body.">
 <meta name="keywords" content="fibroids, myomectomy, fibroid surgery, personal story, hormonal health, OB/GYN, uterine health, Harmonious Hormones, reproductive health, Black women's health">
 <meta name="author" content="Harmonious Hormones">
 
