--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<p class="has-text-align-center has-medium-font-size">Do you feel misunderstood, dismissed, or isolated – like you’re carrying the weight of it all by yourself?</p>
+<p class="has-text-align-center has-medium-font-size">Do you feel misunderstood, dismissed, or isolated  like you’re carrying the weight of it all by yourself?</p>
 
 
 
@@ -202,11 +202,11 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<p class="has-text-align-center has-medium-font-size">Whether you&#8217;re navigating surgery, infertility, chronic pain, cycle issues, or the emotional toll of being unheard – this is a space for you.</p>
+<p class="has-text-align-center has-medium-font-size">Whether you&#8217;re navigating surgery, infertility, chronic pain, cycle issues, or the emotional toll of being unheard this is a space for you.</p>
 
 
 
-<p class="has-text-align-center has-medium-font-size">Let’s talk. Let’s learn. Let’s support each other – without judgment, without shame.</p>
+<p class="has-text-align-center has-medium-font-size">Let’s talk. Let’s learn. Let’s support each other  without judgment, without shame.</p>
 
 
 
