--- a/my-story/index.html
+++ b/my-story/index.html
@@ -311,6 +311,33 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16
 </div>
 </main>
 
+	<p class="has-text-align-center has-medium-font-size">Your opion and views matter :) ...click on the below Icon to share</p>
+<div id="disqus_thread"></div>
+<!-- Disqus Comment Thread -->
+
+<script>
+  var disqus_config = function () {
+    this.page.url = window.location.href;  // Replace if needed
+    this.page.identifier = "home-page";    // Unique ID
+  };
+
+  var disqus_loaded = false;
+  window.addEventListener('scroll', function () {
+    var thread = document.getElementById('disqus_thread');
+    if (!disqus_loaded && window.scrollY + window.innerHeight >= thread.offsetTop) {
+      var d = document, s = d.createElement('script');
+      s.src = 'https://harmonious-hormones.disqus.com/embed.js'; // Your Disqus shortname
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      disqus_loaded = true;
+    }
+  });
+</script>
+
+<noscript>
+  Please enable JavaScript to view the 
+  <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript>
 
 <footer class="wp-block-template-part">
 <div class="wp-block-group alignfull has-background-color has-white-color has-black-background-color has-text-color has-background has-link-color wp-elements-4e91216fed3efe85c2092d15444535fd is-vertical is-content-justification-stretch is-layout-flex wp-container-core-group-is-layout-48a3dbfb wp-block-group-is-layout-flex" style="min-height:40vh;margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--60);padding-right:var(--wp--preset--spacing--40);padding-bottom:var(--wp--preset--spacing--60);padding-left:var(--wp--preset--spacing--40)">
