--- a/fibroids/index.html
+++ b/fibroids/index.html
@@ -208,7 +208,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Intro</h2>
+<h3 class="wp-block-heading">Intro</h3>
 
 
 
@@ -216,7 +216,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">What Causes Fibroids?</h2>
+<h3 class="wp-block-heading">What Causes Fibroids?</h3>
 
 
 
@@ -224,7 +224,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Hormonal Imbalance</h2>
+<h3 class="wp-block-heading">Hormonal Imbalance</h3>
 
 
 
@@ -232,7 +232,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Progesterone</h2>
+<h3 class="wp-block-heading">Progesterone</h3>
 
 
 
@@ -248,7 +248,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Genetic Links</h2>
+<h3 class="wp-block-heading">Genetic Links</h3>
 
 
 
@@ -256,7 +256,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Lifestyle Factors and Environmental Exposure</h2>
+<h3 class="wp-block-heading">Lifestyle Factors and Environmental Exposure</h3>
 
 
 
@@ -264,7 +264,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Common Symptoms of Fibroids</h2>
+<h3 class="wp-block-heading">Common Symptoms of Fibroids</h3>
 
 
 
@@ -272,7 +272,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Diagnosed With Fibroids &#8211; What Next?</h2>
+<h3 class="wp-block-heading">Diagnosed With Fibroids &#8211; What Next?</h3>
 
 
 
@@ -284,7 +284,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Types of Fibroids by Location</h2>
+<h3 class="wp-block-heading">Types of Fibroids by Location</h3>
 
 
 
@@ -292,7 +292,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Treatment Options Available</h2>
+<h3 class="wp-block-heading">Treatment Options Available</h3>
 
 
 
@@ -304,12 +304,12 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 
-<h2 class="wp-block-heading">Examples of Hormonal Supplements That Can Help</h2>
+<h3 class="wp-block-heading">Examples of Hormonal Supplements That Can Help</h3>
 
 
 
 <ul class="wp-block-list">
-<li>&#8211; Chasteberry (Vitex)</li>
+<li>Chasteberry (Vitex)</li>
 </ul>
 
 
@@ -319,7 +319,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; DIM (Diindolylmethane)</li>
+<li>DIM (Diindolylmethane)</li>
 </ul>
 
 
@@ -329,7 +329,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; Milk Thistle (Silymarin)</li>
+<li>Milk Thistle (Silymarin)</li>
 </ul>
 
 
@@ -339,7 +339,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; Inositol (Myoinositol + D-Chiro)</li>
+<li>Inositol (Myoinositol + D-Chiro)</li>
 </ul>
 
 
@@ -349,7 +349,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; Ashwagandha</li>
+<li>Ashwagandha</li>
 </ul>
 
 
@@ -359,7 +359,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; Kanchanara Guggulu</li>
+<li>Kanchanara Guggulu</li>
 </ul>
 
 
@@ -369,7 +369,7 @@ ol,ul{box-sizing:border-box}:root :where(.wp-block-list.has-background){padding:
 
 
 <ul class="wp-block-list">
-<li>&#8211; Vitamin D3</li>
+<li>Vitamin D3</li>
 </ul>
 
 
