--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<h4 class="wp-block-heading">💚September is PCOS awareness month💚</h4>
+<h4 class="wp-block-heading">💚Unpacking PCOS :the most common hormonal disorder in women💚</h4>
 
 
 
-<p>check out the posts below that raise awareness and supports this initiative</p>
+<p>Talking PCOS honestly: symptoms, struggles, and solutions that work</p>
 
 
 
