--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<h4 class="wp-block-heading">💚Unpacking PCOS :the most common hormonal disorder in women💚</h4>
+<h4 class="wp-block-heading">💚Unpacking PCOS :the most common hormonal disorder💚</h4>
 
 
 
